# grocery-prices

./: .gitignore  .pre-commit-config.yaml  Dockerfile  generate_version.sh  pyproject.toml  setup-local.sh  sonar-project.properties
.github/workflows/: build-and-test-lambda.yaml  build-and-test-ui.yaml  build-and-test.yaml  deploy.yaml  generate-tag.yaml  lambda.yaml  main.yaml  sonarqube.yaml  teardown.yaml  terraform-apply.yaml  terraform-plan.yaml  ui.yaml
grocery_prices/: main.py  search.py
grocery_prices/features/: search.py
grocery_prices/handlers/: add_grocery_item.py  remove_grocery_item.py  save_price.py  search.py
grocery_prices/merchants/: __init__.py  base.py  woolworths.py
grocery_prices/mocks/: add_grocery_item.py  remove_grocery_item.py  save_price.py  search.py
grocery_prices/mocks/data/: search_response.json
grocery_prices/utils/: output.py  session.py
infra/: dynamodb.tf  ecr.tf  events.tf  iam.tf  local.tfvars  main.tf  variables.tf
infra/lambdas/: add_grocery_item.tf  outputs.tf  remove_grocery_item.tf  save_price.tf  search_prices.tf  variables.tf
infra/scripts/: purge_old_images.py
ui/: eslint.config.mjs  jest.config.ts  package-lock.json  package.json
ui/src/: theme.ts
ui/src/actions/: searchGroceries.ts  trackGrocery.ts
ui/src/app/: layout.tsx  page.test.tsx  page.tsx
ui/src/components/: ColorScheme.test.tsx  ColorScheme.tsx  SearchGroceryForm.test.tsx  SearchGroceryForm.tsx  SearchResultList.test.tsx  SearchResultList.tsx
ui/src/models/: errors.ts  grocery.ts
ui/src/server/: client.ts  search-groceries.test.ts  (+1 more)
(+2 files in other folders)
