[tool.poetry]
name = "grocery-prices"
version = "0.1.0"
description = "A tool to check grocery prices and determine which items are on sale"
authors = ["Daniel Chin <wengjae@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
requests-cache = "^1.2.1"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
indent-width = 4
