[tool.poetry]
name = "grocery-prices"
version = "0.1.0"
description = "A tool to check grocery prices and determine which items are on sale"
authors = ["Daniel Chin <wengjae@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
requests-cache = "^1.2.1"
pydantic = "^2.10.6"
boto3 = "^1.36.11"
aws-lambda-powertools = "^3.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"
boto3-stubs = {version = "1.36.11", extras = ["dynamodb"]}

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]
